# DC_Assgn

./: .gitignore
Assignment_1/: README.md  SK  SK-cs21btech11001.cpp  VC  VC-cs21btech11001.cpp  inp-params.txt  main  main.cpp  plot.py  report.md  run.sh  sk-out.txt  structs.cpp  test  test.cpp  vc-out.txt  vc.csv
Assignment_1/SK.dSYM/Contents/: Info.plist
Assignment_1/SK.dSYM/Contents/Resources/DWARF/: SK
Assignment_1/VC.dSYM/Contents/: Info.plist
Assignment_1/VC.dSYM/Contents/Resources/DWARF/: VC
Assignment_1/pdf/: report.md
Assignment_1/src/: SK-cs21btech11001.cpp  VC-cs21btech11001.cpp  structs.cpp
Assignment_2/: Cargo.toml  inp-params.txt  ips.txt  mc.txt  plot.py  plot1.py  plot2.py  report.md  run1.sh  run2.sh  scr.py
Assignment_2/log/rc/: out_0.txt  out_1.txt  out_10.txt  out_11.txt  out_12.txt  out_13.txt  out_14.txt  out_15.txt  out_16.txt  out_17.txt  out_19.txt  out_2.txt  out_20.txt  out_21.txt  out_22.txt  out_23.txt  out_24.txt  out_3.txt  out_4.txt  out_5.txt  out_6.txt  out_7.txt  out_8.txt  out_9.txt
Assignment_2/src/: lib.rs  maekawa.rs  main.rs  rc.rs  request.rs  utils.rs
Theory/: A1.md
