[package]
name = "assignment_2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polling = "3.5.0"
rand = "0.8.5"
serde = "1.0.197"
serde_derive = "1.0.197"
serde_json = "1.0.114"
time = "0.3.34"
tokio = { version = "1.36.0", features = ["net", "io-std"] }
